# bt2x

./: .dockerignore  .gitignore  .gitmodules  build-docs.sh  docker-compose.bt4ot.yml  docker-compose.monitor.yml  docker-compose.sigstore.yml  generate-benchmark-data.py  performance_benchmarks.py  populate-rekor.sh  process-benchmark-data.py  readme.md  setup.sh
benchmark-output/: benchmarks-size.json  performance-benchmark-2024-08-20 07:15:36.214852.json  performance-benchmark-2024-08-20 07:16:39.421518.json  performance-benchmark-2024-08-20 07:17:33.877914.json  performance-benchmark-2024-08-20 07:18:27.641227.json  performance-benchmark-2024-08-20 07:19:22.223523.json  performance-benchmark-2024-08-20 07:22:22.761514.json  performance-benchmark-2024-08-20 07:23:17.150873.json  performance-benchmark-2024-08-20 07:24:12.539264.json  performance-benchmark-2024-08-20 07:25:08.425179.json  performance-benchmark-2024-08-20 07:26:04.337105.json  performance-benchmark-2024-08-20 07:27:00.148576.json  performance-benchmark-2024-08-20 07:27:55.237711.json  performance-benchmark-2024-08-20 07:28:50.945571.json  performance-benchmark-2024-08-20 07:29:46.754391.json  performance-benchmark-2024-08-20 07:30:40.412155.json  performance-benchmark-2024-08-20 07:31:35.143103.json  performance-benchmark-2024-08-20 07:32:28.985440.json  performance-benchmark-2024-08-20 07:33:22.107728.json  performance-benchmark-2024-08-20 07:34:16.072524.json  performance-benchmark-2024-08-20 07:36:24.696037.json  performance-benchmark-2024-08-20 07:37:17.733229.json  performance-benchmark-2024-08-20 07:38:10.775495.json  performance-benchmark-2024-08-20 07:39:03.822099.json  performance-benchmark-2024-08-20 07:39:56.865710.json  performance-benchmark-2024-08-20 08:28:50.463366.json  performance-benchmark-2024-08-20 08:29:42.892983.json  performance-benchmark-2024-08-20 08:30:36.962670.json  performance-benchmark-2024-08-20 08:31:31.136874.json  performance-benchmark-2024-08-20 08:32:24.280363.json  performance-benchmark-2024-08-20 08:34:02.378899.json  performance-benchmark-2024-08-20 08:34:55.625728.json  performance-benchmark-2024-08-20 08:35:48.872563.json  performance-benchmark-2024-08-20 08:36:43.145201.json  performance-benchmark-2024-08-20 08:37:36.392582.json  performance-benchmark-2024-08-20 08:38:29.743328.json  performance-benchmark-2024-08-20 08:39:24.220492.json  performance-benchmark-2024-08-20 08:40:18.185840.json  performance-benchmark-2024-08-20 08:41:12.867675.json  performance-benchmark-2024-08-20 08:42:07.437976.json  (+65 more)
benchmarking/: .gitignore  benchmark_server.py  performance-benchmarks.ipynb  size-benchmarks.ipynb
bt2x/: .gitignore  Cargo.toml  README.md  deny.toml
bt2x-embassy-std/: Cargo.toml  deny.toml  readme.md
bt2x-embassy-std/src/: main.rs
bt2x-embedded-ffi/: Cargo.toml  LICENSE.txt  bindings.h  build.rs  deny.toml
bt2x-embedded-ffi/.cargo/: config.toml
bt2x-embedded-ffi/src/: lib.rs
bt2x-pi-pico/: Cargo.toml
bt2x-pi-pico-w/: .gitignore  Cargo.toml  README.md  build.rs  deny.toml  random-bytes  rust-toolchain.toml
bt2x-pi-pico-w/.cargo/: config.toml
bt2x-pi-pico-w/src/: blinky.rs  main.rs
bt2x-pi-pico-w/src/benchmarking/: code-size-full.rs  code-size-no-tuf.rs  code-size-simple-signature.rs  code-size-update-only.rs  performance.rs
bt2x-pi-pico/.cargo/: config.toml
bt2x-pi-pico/src/: main.rs
bt2x/bt2x-cli/: Cargo.toml
bt2x/bt2x-cli/src/: main.rs
bt2x/bt2x-common/: Cargo.toml
bt2x/bt2x-common/src/: error.rs  gossip.rs  lib.rs  rekor.rs  sct.rs  serde.rs  sigstore_config.rs
bt2x/bt2x-common/src/artifact/source/: bundle.rs  mod.rs  oci.rs
bt2x/bt2x-common/src/merkle/: mod.rs  rfc6962.rs  tree.rs  verify.rs
bt2x/bt2x-common/src/tuf/: mod.rs
bt2x/bt2x-common/src/verifier/: bt.rs  mod.rs
bt2x/bt2x-embedded/: Cargo.toml
bt2x/bt2x-embedded/src/: lib.rs
bt2x/bt2x-embedded/src/models/: alpine.rs  alpine_all_of.rs  consistency_proof.rs  cose.rs  cose_all_of.rs  error.rs  hashedrekord.rs  hashedrekord_all_of.rs  helm.rs  helm_all_of.rs  inactive_shard_log_info.rs  inclusion_proof.rs  intoto.rs  intoto_all_of.rs  jar.rs  jar_all_of.rs  log_entry_value.rs  log_entry_value_attestation.rs  log_entry_value_verification.rs  log_info.rs  mod.rs  proposed_entry.rs  rekord.rs  rekord_all_of.rs  rfc3161.rs  rfc3161_all_of.rs  rpm.rs  rpm_all_of.rs  search_index.rs  search_index_public_key.rs  search_log_query.rs  tuf.rs  tuf_all_of.rs
bt2x/bt2x-flasher/: Cargo.toml
bt2x/bt2x-flasher/src/: args.rs  main.rs
bt2x/bt2x-monitor/: Cargo.toml  README.md
bt2x/bt2x-monitor/src/: cli.rs  lib.rs  main.rs
bt2x/bt2x-ota/: Cargo.toml
bt2x/bt2x-ota-common/: Cargo.toml
bt2x/bt2x-ota-common/src/: flash.rs  lib.rs  net.rs
bt2x/bt2x-ota/src/: cli.rs  main.rs
bt2x/bt2x-server/: Cargo.toml
bt2x/bt2x-server/src/: cli.rs  config.rs  main.rs
dockerfiles/: bt2x-monitor.Dockerfile  bt2x-ota.Dockerfile  bt2x.Dockerfile  oci-registry.Dockerfile  populate-rekor.Dockerfile
pico-w-bootloader/: Cargo.toml  README.md  main.rs
tuf-no-std/: .gitignore  Cargo.toml  README.md  deny.toml  test-scenarios.md
tuf-no-std/tests/: 1.root.json  root.json  rsa-root.json  snapshots.json  targets.json  timestamp.json
tuf-no-std/tests/generated_data/ed25519_metadata/: root_with_ed25519.json  timestamp_with_ed25519.json
tuf-no-std/tuf-no-std/: Cargo.toml
tuf-no-std/tuf-no-std-cli/: Cargo.toml
tuf-no-std/tuf-no-std-cli/src/: args.rs  config.rs  main.rs
tuf-no-std/tuf-no-std-common/: Cargo.toml
tuf-no-std/tuf-no-std-common/src/: common.rs  constants.rs  error.rs  lib.rs  remote.rs  storage.rs
tuf-no-std/tuf-no-std-common/src/crypto/: composite_spki.rs  mod.rs  sign.rs
tuf-no-std/tuf-no-std-der/: Cargo.toml
tuf-no-std/tuf-no-std-der/src/: lib.rs  role.rs  root.rs  signature.rs  snapshot.rs  targets.rs  timestamp.rs
tuf-no-std/tuf-no-std/src/: builder.rs  canonical.rs  format.rs  lib.rs  signature.rs  utils.rs
tuf-no-std/tuf-no-std/src/role/: mod.rs  root.rs  snapshot.rs  targets.rs  timestamp.rs
tuf-no-std/tuf-no-std/tests/: integration_tests.rs
(+36 files in other folders)
