[package]
name = "pico-w-updater"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
path = "src/blinky.rs"
name = "blinky"
license = "Apache-2.0"

[[bin]]
path = "src/benchmarking/code-size-full.rs"
name = "benchmark-code-size-full"
license = "Apache-2.0"

[[bin]]
path = "src/benchmarking/code-size-no-tuf.rs"
name = "benchmark-code-size-no-tuf"
license = "Apache-2.0"

[[bin]]
path = "src/benchmarking/code-size-simple-signature.rs"
name = "benchmark-code-size-signature-only"
license = "Apache-2.0"

[[bin]]
path = "src/benchmarking/code-size-update-only.rs"
name = "benchmark-code-size-update-only"
license = "Apache-2.0"

[[bin]]
path = "src/benchmarking/performance.rs"
name = "benchmark-performance"
license = "Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [
    "defmt",
] }
embassy-sync = { version = "0.6", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [
    "defmt",
] }
embassy-executor = { version = "0.5", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-16384",
] }
embassy-time = { version = "0.3", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-boot-rp = { version = "0.2", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [
] }
embassy-usb = { version = "0.2", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [
    "defmt",
] }
embassy-net = { version = "0.4", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-net-wiznet = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [
    "defmt",
] }
embassy-futures = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180" }
embassy-usb-logger = { version = "0.2", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "firmware-logs",
], rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "overclock",
], rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180" }

#smoltcp = { version = "0.10.0", default-features = false, features = [
#    "proto-ipv4",
#    "socket",
#    "async",
#] }

bt2x-embedded = { path = "../bt2x/bt2x-embedded" }
bt2x-ota-common = { path = "../bt2x/bt2x-ota-common", default-features = false, features = [
    "defmt",
] }
tuf-no-std = { path = "../tuf-no-std/tuf-no-std", default-features = false, features = [
    "der",
    "verify",
    "ecdsa",
    "async",
] }

embedded-alloc = "0.5.0"
atomic-polyfill = "1.0.3"
ecdsa = { version = "0.16.1", default-features = false }
signature = "2.0.0"
p256 = { version = "0.13.0", default-features = false }
digest = "0.10.6"
serde = { version = "1.0", default-features = false }
serde-json-core = "0.5.0"
reqwless = { version = "0.12.0", default-features = false, features = [
    "defmt",
] }
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
byte-slice-cast = { version = "1.2.0", default-features = false }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

[patch.crates-io]


[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
strip = "symbols"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 1
debug = false
debug-assertions = false
opt-level = "z"
overflow-checks = false
