[package]
edition = "2021"
name = "rp-bootloader-example"
version = "0.1.0"
description = "Example bootloader for RP2040 chips"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

embassy-rp = { version = "0.1", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [] }
embassy-boot-rp = { version = "0.2", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180" }
embassy-sync = { version = "0.6", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180" }
embassy-time = {  version = "0.3", git = "https://github.com/embassy-rs/embassy", rev = "a2acb3e3dceddb4752f8fb1c17aa65e1959a2180", features = [] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"
cfg-if = "1.0.0"

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-rp/defmt",
    "embassy-rp/defmt",
]

[profile.release]
debug = true
opt-level = 's'
