[workspace]
members = [
    "tuf-no-std-common",
    "tuf-no-std-der",
    "tuf-no-std",
    "tuf-no-std-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.75", default-features = false }
async-trait = "0.1"
clap = "4.5"
const-oid = { version = "0.9.5", default-features = false }
der = { version = "0.7.8", default-features = false }
ed25519 = { version = "2.2", default-features = false }
ed25519-dalek = { version = "2.0", default-features = false }
either = { version = "1.8", default-features = false }
hash32 = "0.3.1"
heapless = "0.8.0"
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4"
olpc-cjson = "0.1"
# oqs = { version = "0.9.0", default-features = false }
p256 = { version = "0.13", default-features = false }
pem = "3.0.4"
pem-rfc7468 = { version = "0.7", default-features = false }
postcard = "1.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", default-features = false }
ring = "0.17.8"
rsa = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false }
serde-json-core = "0.5"
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10.7", default-features = false }
signature = { version = "2", default-features = false }
spki = { version = "0.7.2", default-features = false }
tokio = "1"
tough = "0.15.0"
untrusted = "0.9.0"
zeroize = { version = "1.6", default-features = false }
